--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,11 +5,12 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
-
-  <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <link rel="stylesheet" href="https://cdn.snipcart.com/themes/2.0/base/snipcart.min.css" >
+  <link rel="stylesheet" href="{{ "/css/styles.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  
+  <script src="https://use.typekit.net/nlq3vzq.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
