--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,11 +3,8 @@
   {% include head.html %}
   <body>
     <header class="site-header">
-      <nav class="navbar navbar-toggleable-md site-navbar">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <nav class="navbar site-navbar">
+        <div class="navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto d-block">
             <li class="nav-item active">
               <a class="nav-link" href="#my-work">My Work</a>
@@ -19,7 +16,7 @@
         </div>
       </nav>
       <div class="row no-gutters h-100 align-items-center row-logo">
-        <div class="col col-logo-pattern left">
+        <div class="col col-logo-pattern left hidden-md-down">
           <div class="pattern"></div>
         </div>
         <div class="col col-logo">
@@ -30,7 +27,7 @@
             {% include_relative assets/svg/tagline.svg %}
           </div>
         </div>
-        <div class="col col-logo-pattern right">
+        <div class="col col-logo-pattern right hidden-md-down">
           <div class="pattern"></div>
         </div>
       </div>
@@ -317,11 +314,12 @@
     </section>
     <section id="my-story">
       <div class="row no-gutters">
-        <div class="col-sm-5 col-story">
+        <div class="col-md-5 col-story">
           <h2>My Story</h2>
           <p>Dawn Desirée DiVirgilio is an aspiring artist working in the Chicago and Milwaukee area. Originally from Sarasota, Florida Dawn draws inspiration from her hometown and her life experiences as she made her way to Chicago with only a suitcase and a box of paints. In November of 2005, two of her biggest influences, her mother and grandmother, passed away. She has since focused primarily on her work and coming into her own as an artist and craftsman. Today, Dawn teaches painting and wine classes at The Bottle Shop and is working to create original merchandise with her work.</p>
         </div>
-        <div class="col-sm-7 col-story-video">
+        <div class="w-100 hidden-md-up"></div>
+        <div class="col-md-7 col-story-video">
           <video loop muted autoplay class="video" poster="{{ '/assets/images/bg-video.jpg' | relative_url }}">
             <source src="{{ '/assets/videos/video-dawn-compressed.mp4' | relative_url }}" type="video/mp4">
           </video>
