--- a/_includes/modal-art.html
+++ b/_includes/modal-art.html
@@ -13,6 +13,7 @@
             <div class="col col-work-thumbnail">
               <img src="{{ include.modalItemThumbnail }}" class="img-fluid">
             </div>
+            <div class="w-100 hidden-md-up"></div>
             <div class="col col-work-details">
               <ul class="list-unstyled">
                 <li class="size">
