--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@
           <div class="pattern"></div>
         </div>
       </div>
-      <video loop muted autoplay class="video" poster="{{ '/assets/images/bg-video.jpg' | relative_url }}">
+      <video loop muted autoplay class="video" poster="{{ '/assets/images/bg-video.jpg' | relative_url }}" preload="auto">
         <source src="{{ '/assets/videos/video-purple-compressed.mp4' | relative_url }}" type="video/mp4">
       </video>
     </header>
@@ -320,7 +320,7 @@
         </div>
         <div class="w-100 hidden-md-up"></div>
         <div class="col-md-7 col-story-video">
-          <video loop muted autoplay class="video" poster="{{ '/assets/images/bg-video.jpg' | relative_url }}">
+          <video loop muted autoplay class="video" poster="{{ '/assets/images/bg-video-green.jpg' | relative_url }}" preload="auto">
             <source src="{{ '/assets/videos/video-dawn-compressed.mp4' | relative_url }}" type="video/mp4">
           </video>
         </div>
