--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,6 +34,9 @@
       <video loop muted autoplay class="video" poster="{{ '/assets/images/bg-video.jpg' | relative_url }}" preload="auto">
         <source src="{{ '/assets/videos/video-purple-compressed.mp4' | relative_url }}" type="video/mp4">
       </video>
+      <div class="signature hidden-md-down">
+        {% include_relative assets/svg/signature.svg %}
+      </div>
     </header>
     <section id="my-work">
       <h2>My Work</h2>
