--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -295,7 +295,7 @@
             modalItemPrice="120.00" 
             modalItemMaxQty="1"
             modalItemWeight="20"
-            modalItemSold="false" %}
+            modalItemSold="true" %}
         </div>
         <div class="grid-item">
           <a class="grid-link" href="#modal-tropical-poppy" data-toggle="modal" data-target="#modal-tropical-poppy">
