--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -7,6 +7,7 @@ $darkPurple: #623f75;
 
 // Fonts
 $font-family-sans-serif: "neuzeit-grotesk", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+$font-family-bebas-neue-bold: "Bebas Neue Bold", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 $font-weight-base: 300;
 
 // Responsive
